# luna

./: .gitmodules  CMakeLists.txt  CMakePresets.json  GenerateSolution.bat  LICENSE  README.md
docs/: todo.txt
docs/licenses/: LICENSE-rres
examples/: CMakeLists.txt  luna_deploy_assets.cmake  luna_deploy_shared_libs.cmake  luna_include_dirs.cmake  luna_set_target_properties.cmake
examples/hello_sprite/: CMakeLists.txt  hello_sprite.arc  main.cpp
examples/hello_sprite/assets/: hello_sprite.arc  hello_sprite.arp
examples/simple/: CMakeLists.txt
examples/simple/rsc/: example_simple.rres  example_simple.rrp
examples/simple/src/: main.c
include/luna/: luna.hpp
include/luna/detail/: actor.hpp  camera.hpp  common.hpp  game.hpp  render.hpp  resources.hpp  room.hpp  shader.hpp  shapes.hpp  sprite.hpp  vertex.hpp
include/luna/detail/shader/: shader_encoded.hpp
include/luna/detail/std/: buffer.hpp  platform.hpp  sorted_list.hpp
rsc/: luna.rres  settings.ini
src/: CMakeLists.txt  actor.cpp  buffer.hpp  camera.cpp  common.cpp  common.hpp  game.cpp  game.hpp  main.c  main.cpp  render.cpp  render.hpp  resources.cpp  resources.hpp  room.cpp  scenes.c  scenes.h  shader.cpp  shader.hpp  shapes.cpp  sprite.cpp  sprite.hpp  vertex.cpp
src/luna/: camera.c  camera.h  collision.c  collision.h  common.h  defaults.h  error.c  error.h  game.c  game.h  input.c  input.h  platform.h  resource.c  resource.h  scene.c  scene.h  sprite.c  sprite.h  tile.c  tile.h
src/luna/std/: debug.c  debug.h  deque.c  deque.h  free_list.c  free_list.h  priority_queue.c  priority_queue.h  queue.c  queue.h  stack.c  stack.h  unordered_map.c  unordered_map.h  unordered_map_str.c  unordered_map_str.h  utilities.c  utilities.h  vector.c  vector.h
src/raylib/: raygui.c  raygui.h  rres-raylib.h  rres.c
src/shader/: CMakeLists.txt  PrimitiveBatch.frag.hlsl  PrimitiveBatch.vert.hlsl  SpriteBatch.frag.hlsl  SpriteBatch.vert.hlsl  shader_encoded.cpp
src/shader/src/: SpriteBatch.vert.hlsl  SpriteBatch.vert.json
src/std/: buffer.hpp  itsort.hpp  platform.hpp  sorted_list.hpp
tools/: CMakeLists.txt
tools/headerencoder/: CMakeLists.txt  main.cpp
